# fridac

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
src/fridac/: __init__.py  _embedded_shim.py  cli.py  shim.js
src/fridac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
tools/: embed_shim.py
